@@ -3,13 +3,14 @@
 AUTOMAKE_OPTIONS = 1.8 dist-bzip2 check-news ansi2knr
 ACLOCAL_AMFLAGS	=  -I config
 
-SUBDIRS =	glob config po doc
 # Only process if target is MS-Windows
 if WINDOWSENV
-    SUBDIRS +=	w32
-    W32INC :=	-I $(top_srcdir)/w32/include
-    W32LIB :=	-Lw32 -lw32
+  MAYBE_W32 =	w32
+  W32INC =	-I $(top_srcdir)/w32/include
+  W32LIB =	-Lw32 -lw32
 endif
+
+SUBDIRS =	glob config po doc $(MAYBE_W32)
 
 bin_PROGRAMS =	make
 
@@ -25,7 +26,7 @@ make_SOURCES =	ar.c arscan.c commands.c default.c dir.c expand.c file.c \
 		misc.c read.c remake.c $(remote) rule.c signame.c \
 		variable.c version.c vpath.c hash.c
 
-EXTRA_make_SOURCES = remote-stub.c remote-cstms.c
+EXTRA_make_SOURCES = vmsjobs.c remote-stub.c remote-cstms.c
 
 noinst_HEADERS = commands.h dep.h filedef.h job.h make.h rule.h variable.h \
 		debug.h getopt.h gettext.h hash.h
