@@ -1,3 +1,7 @@
+2005-05-09  Paul D. Smith  <psmith@gnu.org>
+
+	* POTFILES.in: Add new file vmsjobs.c.
+
 2005-04-06  Paul D. Smith  <psmith@gnu.org>
 
 	* LINGUAS: Added a new translation for Kinywarwanda (rw).
